# bazel-python-example

./: BUILD.bazel  WORKSPACE  example.py  example_test.py
